--- a/.github/workflows/publish-typescript-sdk.yml
+++ b/.github/workflows/publish-typescript-sdk.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Release TypeScript SDK
         env:
+          FERN_TOKEN: ${{ secrets.FERN_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           fern generate --group ts-sdk --version ${{ inputs.version }} --log-level debug
-
