--- a/fern/generators.yml
+++ b/fern/generators.yml
@@ -23,7 +23,7 @@ groups:
         version: 1.10.3
         output:
           location: npm
-          package-name: @devalog/imdb-test
+          package-name: devalog-imdb-test
           token: ${NPM_TOKEN}
         github: 
           repository: devalog/fern-sdk-test
